feat: offer added
