# public/swagger.json
@@ -223,6 +223,38 @@
 				"type": "object",
 				"additionalProperties": false
 			},
+			"CreateOfferValidation": {
+				"properties": {
+					"code": {
+						"type": "string"
+					},
+					"percentage": {
+						"type": "number",
+						"format": "double"
+					},
+					"startingDate": {
+						"type": "string"
+					},
+					"endingDate": {
+						"type": "string"
+					},
+					"products_ids": {
+						"items": {
+							"type": "string"
+						},
+						"type": "array"
+					}
+				},
+				"required": [
+					"code",
+					"percentage",
+					"startingDate",
+					"endingDate",
+					"products_ids"
+				],
+				"type": "object",
+				"additionalProperties": false
+			},
 			"CreateCategory": {
 				"properties": {
 					"name": {
@@ -483,6 +515,46 @@
 				],
 				"security": [],
 				"parameters": []
+			}
+		},
+		"/offer": {
+			"post": {
+				"operationId": "CreateOffer",
+				"responses": {
+					"200": {
+						"description": "Ok",
+						"content": {
+							"application/json": {
+								"schema": {
+									"properties": {
+										"message": {
+											"$ref": "#/components/schemas/CreateOfferValidation"
+										}
+									},
+									"required": [
+										"message"
+									],
+									"type": "object"
+								}
+							}
+						}
+					}
+				},
+				"tags": [
+					"offer"
+				],
+				"security": [],
+				"parameters": [],
+				"requestBody": {
+					"required": true,
+					"content": {
+						"application/json": {
+							"schema": {
+								"$ref": "#/components/schemas/CreateOfferValidation"
+							}
+						}
+					}
+				}
 			}
 		},
 		"/category": {
